--- a/.github/workflows/automation.yaml
+++ b/.github/workflows/automation.yaml
@@ -12,7 +12,7 @@ on:
   push:
     branches:
     # For testing purposes, use your branch name here
-      - "ganeshnj/ci/carthage-auto"
+      - "ganeshnj/ci/coco-auto"
 
 env:
   GH_TOKEN: ${{ github.token }}
@@ -90,3 +90,8 @@ jobs:
         working-directory: ./opentelemetry-swift-packages
         run: |
           ./scripts/release.sh --version ${{ env.OTEL_SWIFT_TAG }}
+
+      - name: Verify
+        if: ${{ env.SKIP_RELEASE != 'true' }}
+        run: |
+          pod lib lint
