--- a/.github/workflows/automation.yaml
+++ b/.github/workflows/automation.yaml
@@ -83,7 +83,7 @@ jobs:
         if: ${{ env.SKIP_RELEASE != 'true' }}
         uses: actions/upload-artifact@v4
         with:
-          name: OpenTelemetryApi.xcframework
+          name: OpenTelemetryApi
           path: |
             ./opentelemetry-swift-packages/artifacts/OpenTelemetryApi.zip
           if-no-files-found: error
