--- a/.github/workflows/automation.yaml
+++ b/.github/workflows/automation.yaml
@@ -12,7 +12,7 @@ on:
   push:
     branches:
     # For testing purposes, use your branch name here
-      - "ganeshnj/ci/pod-push"
+      - "ganeshnj/fix/commit-signature-valid"
 
 env:
   GH_TOKEN: ${{ github.token }}
@@ -61,7 +61,6 @@ jobs:
       - name: Checkout self
         uses: actions/checkout@v4
         with:
-          token: ${{ secrets.BOT_ACCESS_TOKEN }}
           path: opentelemetry-swift-packages
 
       - name: Checkout opentelemetry-swift
