Pin actions to commit hash

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,16 +9,16 @@ on:
 
 jobs:
   build:
-    runs-on: macos-12
+    runs-on: macos-14
 
     steps:
       - name: Checkout self
-        uses: actions/checkout@v4
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           path: opentelemetry-swift-packages
 
       - name: Checkout opentelemetry-swift
-        uses: actions/checkout@v4
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           repository: open-telemetry/opentelemetry-swift
           path: opentelemetry-swift
@@ -32,7 +32,7 @@ jobs:
           ./scripts/build.sh --source ../opentelemetry-swift --target OpenTelemetryApi
 
       - name: Upload artifacts
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@65c4c4a1ddee5b72f698fdd19549f0f0fb45cf08 # v4.6.0
         with:
           name: OpenTelemetryApi
           path: |
@@ -40,11 +40,11 @@ jobs:
           if-no-files-found: error
 
   spm:
-    runs-on: macos-12
+    runs-on: macos-14
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - name: Test
         run: |
           swift test | xcbeautify
