RUM-8558 Drop OTel API Tests target
as in version 1.13.0 it has transitive dependency on the entire
OTel implementation through `OpenTelemetryTestUtils`. This way we
resign from running tests for OTel API, assuming it was properly
qualified in `opentelemetry-swift` repo before publishing the
release tag.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -45,6 +45,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Test
+      - name: Build
         run: |
-          swift test | xcbeautify
+          swift build | xcbeautify
