--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "ncreated/update-ci-for-new-release-model" ]
   pull_request:
     branches: [ "main" ]
   workflow_dispatch:
