--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,9 +14,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-      - name: Test
+      - name: Build SPM Package
         run: |
-          swift build | xcbeautify
+          swift build
 
   build-xcframework:
     runs-on: macos-14
