--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,10 +32,16 @@ jobs:
         run: |
           ./scripts/build.sh --source . --target OpenTelemetryApi
 
-      - name: Upload artifacts
+      - name: Upload OpenTelemetryApi.zip
         uses: actions/upload-artifact@65c4c4a1ddee5b72f698fdd19549f0f0fb45cf08 # v4.6.0
         with:
           name: OpenTelemetryApi
-          path: |
-            ./opentelemetry-swift-packages/artifacts/OpenTelemetryApi.zip
+          path: ./opentelemetry-swift-packages/artifacts/OpenTelemetryApi.zip
+          if-no-files-found: error
+
+      - name: Upload version_info.md
+        uses: actions/upload-artifact@65c4c4a1ddee5b72f698fdd19549f0f0fb45cf08 # v4.6.0
+        with:
+          name: OpenTelemetryApi-VersionInfo
+          path: ./opentelemetry-swift-packages/artifacts/version_info.md
           if-no-files-found: error
