--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,14 +1,12 @@
-name: CI
+name: Release
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-  workflow_dispatch:
+    tags:
+      - '*'
 
 jobs:
-  build:
+  release:
     runs-on: macos-14
 
     steps:
@@ -16,6 +14,9 @@ jobs:
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           path: opentelemetry-swift-packages
+
+      - name: Extract Version from Tag
+        run: echo "VERSION=${{ github.ref_name }}" >> $GITHUB_ENV
 
       - name: Build XCFramework
         working-directory: ./opentelemetry-swift-packages
@@ -36,13 +37,7 @@ jobs:
           path: ./opentelemetry-swift-packages/artifacts/version_info.md
           if-no-files-found: error
 
-  spm:
-    runs-on: macos-14
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-
-      - name: Test
+      - name: Publish GH Asset
+        working-directory: ./opentelemetry-swift-packages
         run: |
-          make test
+          make publish-github VERSION=${VERSION}
