--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,5 +1,8 @@
 name: Release
 
+permissions:
+  contents: write  # Required for creating GitHub Releases and uploading artifacts
+
 on:
   push:
     tags:
